[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
# serialization stuff
serde_json = "1.0.73"
serde = { version = "1.0.132", features = [ "derive" ] }
serde_repr = "0.1.7"
# tauri itself
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
# epub stuff
epub = { git = "https://github.com/danigm/epub-rs" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
